--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'juloo.keyboard2'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "juloo.keyboard2"
-        minSdk 4
-        targetSdkVersion 33
+        minSdk 21 // required by AndroidX library
+        targetSdkVersion 34
         versionCode 36
         versionName "1.24.0"
     }
@@ -34,7 +34,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'androidx.emoji2:emoji2-bundled:1.4.0'
+    implementation 'androidx.emoji2:emoji2-emojipicker:1.4.0'
 }
 
 tasks.named("preBuild") {
